# planner_playground

./: CMakeLists.txt  README.md  package.xml
config/: costmaps_plugins.yaml  global_costmap_test.yaml  map.yaml  nav.rviz  planner_server.yaml  smoother_server.yaml
launch/: test_amcl.launch.py  test_planner.launch.py
src/: test_planner_with_rviz_node.cpp
